[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Omar Zeghouani <omarzeghouanii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^1.5.0.221012"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
